bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:2: error: not found: value temps2
  return((temp1<0 && temp2>100) || (temp1>100 && temps2<0))
                                                 ^